# infer-onnx-shape

./: CMakeLists.txt  LICENSE  README.md
docs/superpowers/plans/: 2026-07-05-infer-onnx-shape.md
docs/superpowers/specs/: 2026-07-05-infer-onnx-shape-design.md
src/: app.cpp  app.h  infer.cpp  infer.h  loader.cpp  loader.h  main.cpp  writer.cpp  writer.h
tests/: app_test.cpp  infer_test.cpp  loader_test.cpp  model_builders.h  smoke_test.cpp  writer_test.cpp
